--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
             {
                 "code": 200
             }
-        ]
-        // "import/no-unresolved": "off"
+        ],
+        "func-names": "off",
+        "vue/no-v-for-template-key": "off"
     }
 }
